Show Payments of Member funktioniert noch nicht

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,9 +15,12 @@
 
     <ul>
         <a href="#members"><button>Mitgliederuebersicht</button></a>
+        <a href="#payments"><button>Zahlungsübersicht</button></a>
         <a href="#createMember"><button>Neues Mitglied anlegen</button></a>
         <a href="#searchMember"><button>Mitglied suchen</button></a>
     </ul>
+
+    <!--TODO: Eine Druckansicht (ohne Buttons) muss erzeugt werden können!-->
 
     <div ng-view></div>
 
