stand vor Aufbau des Zahlungsübersichtkontrollers

--- a/src/main/webapp/payments.html
+++ b/src/main/webapp/payments.html
@@ -23,13 +23,13 @@
     </thead>
     <tbody>
 
-    {{model.payments.member.member_id}}
+<!--    {{model.payments.member.member_id}}
     {{model.payments.payment_id}}
     {{model.payments.year}}
     {{model.payments.amount}}
     {{model.payments.memberType}}
     {{model.payments.status}}
-    <!--{{model.payments.member.name}}-->
+    &lt;!&ndash;{{model.payments.member.name}}&ndash;&gt;-->
 
     <tr ng-repeat="payments in model.payments">
 
