Status, payments und Bearbeitungsfunktionalität implementiert

--- a/src/main/webapp/createMember.html
+++ b/src/main/webapp/createMember.html
@@ -35,6 +35,12 @@
                                                                   placeholder="Mustermann"
                                                                   required ng-model="member.surname"/></li>
 
+
+                <li><label for="familyMember">Familienmitglied?:</label><input id="familyMember"
+                                                                                type="checkbox"
+                                                                                name="familyMember"
+                                                                               ng-model="member.familyMember"/></li>
+
                 <li><label for="birthday">Geburtsdatum:</label> <input id="birthday"
                                                                        name="birthday"
                                                                        type="date"
