--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,13 +15,13 @@
     <h4>IAA-Hausarbeit: Mitgliederverwaltung</h4>
 
     <ul>
-        <a href="#members"><button>Mitgliederübersicht</button></a>
-        <a href="#payments"><button>Zahlungsübersicht</button></a>
+        <a href="#members"><button>Mitgliederuebersicht</button></a>
+        <a href="#payments/{{0}}"><button>Zahlungsuebersicht</button></a>
         <a href="#createMember"><button>Neues Mitglied anlegen</button></a>
         <a href="#searchMember"><button>Mitglied suchen</button></a>
     </ul>
 
-    <!--TODO: Eine Druckansicht (ohne Buttons) muss erzeugt werden können!-->
+    <!--TODO: Eine Druckansicht (ohne Buttons) muss erzeugt werden kï¿½nnen!-->
 
     <div ng-view></div>
 
