--- a/src/main/webapp/members.html
+++ b/src/main/webapp/members.html
@@ -8,13 +8,15 @@
 </head>
 <body>
 
-<h1>Alle Mitglieder:</h1>
-
+<h1>Mitgliederuebersicht:</h1>
+<form>
+    <input type="button" value=" Drucken " onClick="javascript:window.print()">
+</form>
+<br>
 <table>
     <thead>
-
     <tr>
-        <th>ID</th>
+        <th>Mitglieds-ID</th>
         <th>Vorname</th>
         <th>Nachname</th>
         <th>Adresse</th>
@@ -49,6 +51,5 @@
     </tbody>
 
 </table>
-
 </body>
 </html>
