--- a/src/main/webapp/searchMember.html
+++ b/src/main/webapp/searchMember.html
@@ -12,7 +12,7 @@
 
 <fieldset>
 
-    <legend>Mitglieder suchen:</legend>
+    <legend>Mitglied suchen:</legend>
 
     <label for="name">Vorname:</label>
     <input id="name"
