Validation-Klasse gibt Data als Output

--- a/src/main/webapp/payments.html
+++ b/src/main/webapp/payments.html
@@ -13,7 +13,7 @@
 <h1>Zahlungsübersicht: {{member_id}}</h1>
 
 <form>
-    <input type="button" value=" Drucken " onClick="javascript:window.print()">
+    <input type="button" value=" Übersicht drucken " onClick="javascript:window.print()">
 </form>
 <br>
 
