--- a/src/main/webapp/members.html
+++ b/src/main/webapp/members.html
@@ -10,13 +10,13 @@
 
 <h1>Mitgliederuebersicht:</h1>
 <form>
-    <input type="button" value=" Drucken " onClick="javascript:window.print()">
+    <input type="button" value=" Übersicht drucken " onClick="javascript:window.print()">
 </form>
 <br>
 <table>
     <thead>
     <tr>
-        <th>Mitglieds-ID</th>
+        <th>Nr.</th>
         <th>Vorname</th>
         <th>Nachname</th>
         <th>Adresse</th>
@@ -27,7 +27,7 @@
         <th>Eintrittsdatum</th>
         <th>Kündigungsdatum</th>
         <th>Austrittsdatum</th>
-        <th>IBAN</th>
+        <th>IBAN-Kontonummer</th>
 
     </tr>
     </thead>
