--- a/src/main/webapp/searchMember.html
+++ b/src/main/webapp/searchMember.html
@@ -5,7 +5,7 @@
     <link href="style.css" rel="stylesheet"/>
 
     <meta charset="UTF-8">
-    <title>Suchergebnisse</title>
+    <title>Mitgliedersuche</title>
 
 </head>
 <body>
@@ -35,6 +35,7 @@
 
     <table>
         <tr>
+            <th>Nr.</th>
             <th>Vorname</th>
             <th>Nachname</th>
             <th>Adresse</th>
@@ -47,7 +48,8 @@
 
         <tr ng-repeat="results in model.results | orderBy:['surname', 'name']">
 
-            <td><a href="#payments/{{results.id}}">{{results.name}}</a></td>
+            <td><a href="#editMember/{{results.member_id}}">{{results.member_id}}</a></td>
+            <td>{{results.name}}</td>
             <td>{{results.surname}}</td>
             <td>{{results.address}}</td>
             <td>{{results.city}}</td>
